OPENIDM-3277 - Fix condition filter button misalignment (verfiied in chat).

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/filter.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/filter.less
@@ -58,6 +58,10 @@
 
 @media (min-width: 992px) {
 
+  .subgroup .type-form-group .type-group .remove-btn {
+    margin-top: 10px;
+  }
+
   .expressionTree {
     margin-left:15px;
   }
